--- a/index.html
+++ b/index.html
@@ -16,27 +16,18 @@
     <link rel="stylesheet" href="./css/styles.css" />
     <title>WEBSTUDIO</title>
   </head>
-
   <body>
     <header class="menu">
       <div class="menu-nav container">
         <nav class="menu-nav-list">
-          <a href="./index.html" class="logo link"
-            >Web<span class="accent">Studio</span></a
-          >
+          <a href="./index.html" class="logo link">Web<span class="accent">Studio</span></a>
 
           <ul class="nav-list list">
             <li>
-              <a class="nav-menu-item current link" href="./index.html"
-                >Studio</a
-              >
+              <a class="nav-menu-item current link" href="./index.html">Studio</a>
             </li>
             <li>
-              <a
-                class="nav-menu-item notactive-page link"
-                href="./portfolio.html"
-                >Portfolio</a
-              >
+              <a class="nav-menu-item notactive-page link" href="./portfolio.html">Portfolio</a>
             </li>
             <li>
               <a class="nav-menu-item link" href="#">Contacts</a>
@@ -46,22 +37,14 @@
         <address class="contacts">
           <ul class="address-list list">
             <li>
-              <a class="list-contacts link" href="mailto:info@devstudio.com"
-                >info@devstudio.com</a
-              >
+              <a class="list-contacts link" href="mailto:info@devstudio.com">info@devstudio.com</a>
             </li>
             <li>
-              <a class="list-contacts link" href="tel:+110001111111"
-                >+11 (000) 111-11-11</a
-              >
+              <a class="list-contacts link" href="tel:+110001111111">+11 (000) 111-11-11</a>
             </li>
           </ul>
         </address>
-        <button
-          class="menu-toggle js-open-menu"
-          aria-expanded="false"
-          aria-controls="mobile-menu"
-        >
+        <button class="menu-toggle js-open-menu" aria-expanded="false" aria-controls="mobile-menu">
           <svg class="icon-mobile-menu" width="24" height="24">
             <use href="./images/icons.svg#mobile-menu"></use>
           </svg>
@@ -78,7 +61,6 @@
           </button>
         </div>
       </section>
-
       <section class="strategy section">
         <div class="container">
           <h2 class="visually-hidden">Benefits</h2>
@@ -92,8 +74,8 @@
               </div>
               <h3 class="strategy-section-title">Strategy</h3>
               <p class="strategy-section-text text">
-                Our goal is to identify the business problem to walk away with
-                the perfect and creative solution.
+                Our goal is to identify the business problem to walk away with the perfect and
+                creative solution.
               </p>
             </li>
             <li class="stratgy-section-item">
@@ -104,8 +86,8 @@
               </div>
               <h3 class="strategy-section-title">Punctuality</h3>
               <p class="strategy-section-text text">
-                Bring the key message to the brand's audience for the best price
-                within the shortest possible time.
+                Bring the key message to the brand's audience for the best price within the shortest
+                possible time.
               </p>
             </li>
             <li class="stratgy-section-item">
@@ -116,8 +98,8 @@
               </div>
               <h3 class="strategy-section-title">Diligence</h3>
               <p class="strategy-section-text text">
-                Research and confirm brands that present the strongest digital
-                growth opportunities and minimize risk.
+                Research and confirm brands that present the strongest digital growth opportunities
+                and minimize risk.
               </p>
             </li>
             <li class="stratgy-section-item">
@@ -128,8 +110,8 @@
               </div>
               <h3 class="strategy-section-title">Technologies</h3>
               <p class="strategy-section-text text">
-                Design practice focused on digital experiences. We bring forth a
-                deep passion for problem-solving.
+                Design practice focused on digital experiences. We bring forth a deep passion for
+                problem-solving.
               </p>
             </li>
           </ul>
@@ -142,10 +124,7 @@
           <ul class="product-section-list list">
             <li class="product-section-item">
               <img
-                srcset="
-                  ./images/main/desktop.jpg    1x,
-                  ./images/main/desktop@x2.jpg 2x
-                "
+                srcset="./images/main/desktop.jpg 1x, ./images/main/desktop@x2.jpg 2x"
                 src="./images/main/desktop.jpg"
                 width="360"
                 alt="desktop product"
@@ -153,10 +132,7 @@
             </li>
             <li class="product-section-item">
               <img
-                srcset="
-                  ./images/main/mobile.jpg    1x,
-                  ./images/main/mobile@x2.jpg 2x
-                "
+                srcset="./images/main/mobile.jpg 1x, ./images/main/mobile@x2.jpg 2x"
                 src="./images/main/mobile.jpg"
                 width="360"
                 alt="mobile product"
@@ -164,10 +140,7 @@
             </li>
             <li class="product-section-item">
               <img
-                srcset="
-                  ./images/main/desktopmobile.jpg    1x,
-                  ./images/main/desktopmobile@x2.jpg 2x
-                "
+                srcset="./images/main/desktopmobile.jpg 1x, ./images/main/desktopmobile@x2.jpg 2x"
                 src="./images/main/desktopmobile.jpg"
                 width="360"
                 alt="all-in-one product"
@@ -183,10 +156,7 @@
           <ul class="team-section-list list">
             <li class="team-cards-item">
               <img
-                srcset="
-                  ./images/main/foto1.jpg    1x,
-                  ./images/main/foto1@x2.jpg 2x
-                "
+                srcset="./images/main/foto1.jpg 1x, ./images/main/foto1@x2.jpg 2x"
                 src="./images/main/foto1.jpg"
                 alt="Mark Guerrero"
                 width="264"
@@ -229,10 +199,7 @@
             </li>
             <li class="team-cards-item">
               <img
-                srcset="
-                  ./images/main/foto2.jpg    1x,
-                  ./images/main/foto2@x2.jpg 2x
-                "
+                srcset="./images/main/foto2.jpg 1x, ./images/main/foto2@x2.jpg 2x"
                 src="./images/main/foto2.jpg"
                 alt="Tom Ford"
                 width="264"
@@ -274,10 +241,7 @@
             </li>
             <li class="team-cards-item">
               <img
-                srcset="
-                  ./images/main/foto3.jpg    1x,
-                  ./images/main/foto3@x2.jpg 2x
-                "
+                srcset="./images/main/foto3.jpg 1x, ./images/main/foto3@x2.jpg 2x"
                 src="./images/main/foto3.jpg"
                 alt="Camila Garcia"
                 width="264"
@@ -319,10 +283,7 @@
             </li>
             <li class="team-cards-item">
               <img
-                srcset="
-                  ./images/main/foto4.jpg    1x,
-                  ./images/main/foto4@x2.jpg 2x
-                "
+                srcset="./images/main/foto4.jpg 1x, ./images/main/foto4@x2.jpg 2x"
                 src="./images/main/foto4.jpg"
                 alt="Daniel Wilson"
                 width="264"
@@ -423,8 +384,8 @@
             >Web<span class="accent-footer">Studio</span></a
           >
           <p class="footer-text text">
-            Increase the flow of customers and sales for your business with
-            digital marketing & growth solutions.
+            Increase the flow of customers and sales for your business with digital marketing &
+            growth solutions.
           </p>
         </div>
         <div class="footer-tab-social">
@@ -489,19 +450,12 @@
             <use href="./images/icons.svg#close"></use>
           </svg>
         </button>
-        <p class="form-text text">
-          Leave your contacts and we will call you back
-        </p>
+        <p class="form-text text"> Leave your contacts and we will call you back </p>
         <form class="form-container">
           <div class="fields">
             <label class="field-lable" for="user-name"> Name </label>
             <div class="field-input">
-              <input
-                type="text"
-                class="username"
-                name="user-name"
-                id="user-name"
-              />
+              <input type="text" class="username" name="user-name" id="user-name" />
               <svg class="icon-lable" width="18" height="24">
                 <use href="./images/icons.svg#person"></use>
               </svg>
@@ -577,18 +531,12 @@
 
       <ul class="mobile-contacts list">
         <li>
-          <a
-            class="mobile-contacts-item link"
-            href="tel:+110001111111"
-            target="_blank"
+          <a class="mobile-contacts-item link" href="tel:+110001111111" target="_blank"
             >+11 (000) 111-11-11</a
           >
         </li>
         <li>
-          <a
-            class="mobile-contacts-item link"
-            href="mailto:info@devstudio.com"
-            target="_blank"
+          <a class="mobile-contacts-item link" href="mailto:info@devstudio.com" target="_blank"
             >info@devstudio.com</a
           >
         </li>
